--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<link rel="stylesheet" href="main.css">
+<html lang="pl">
+<meta charset="UTF-8">
 </head>
 <body>
-    jd
+
+<nav>
+<ul>
+  <li><a href="strona.html">Główna</a></li>
+  <li><a href="cennik.html">Cennik</a></li>
+  <li><a href="uslugi.html">Usługi</a></li>
+  <li><a href="kontakt.html">Kontakt</a></li>
+  <li><a href="galeria.html">Galeria</a></li>
+  <li style="float:right"><a class="active" href="about.html">O nas</a></li>
+  
+</ul>
+</nav>
+<br>
+<div class="logo">
+<header><h1><img src="logo.jpg" alt="logo" width="325" height="250"></h1></header></div>
+<div class="body">
+<article>
+<h2>O serwisie MangaMex</h2>
+<p>Serwis MangaMex tłumaczy dla was mangi już od 2005 roku! Uważamy że nasza firma jest gotowa spełnić wszelkie Państwa oczekiwania!<br> 
+W razie jakichkolwiek pytań/problemów prosimy o kontakt:
+<a href="kontakt.html">Kontakt</a>
+
+</p>
+
+</article>
+</div>
+
+</div>
 </body>
 </html>
