wysłanie strony essa

--- a/about.html
+++ b/about.html
@@ -10,18 +10,36 @@
 <nav>
 <ul>
   <li><a href="strona.html">Główna</a></li>
-  <li><a href="cennik.html">Cennik</a></li>
-  <li><a href="uslugi.html">Usługi</a></li>
   <li><a href="kontakt.html">Kontakt</a></li>
-  <li><a href="galeria.html">Galeria</a></li>
   <li style="float:right"><a class="active" href="about.html">O nas</a></li>
   
 </ul>
 </nav>
 <br>
-<div class="logo">
-<header><h1><img src="logo.jpg" alt="logo" width="325" height="250"></h1></header></div>
-<div class="body">
+<br>
+<br>
+
+<div class="abo"
+<img src="tlo.jpeg">
+</div>
+
+<h2 style="text-align: center;"><strong><img src="tlo.jpeg"></strong></h2><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+<br>
 <article>
 <h2>O serwisie MangaMex</h2>
 <p>Serwis MangaMex tłumaczy dla was mangi już od 2005 roku! Uważamy że nasza firma jest gotowa spełnić wszelkie Państwa oczekiwania!<br> 
